--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -5,209 +5,7 @@
 \begin{document}
 \sf
 
-\mypart{}{Numerical Analysis}
 
-\sld{Floating-Point Standard: IEEE 754}
-%
-\begin{itemize}
-\item \myemph{Finite numbers} ($s$: sign; $c$: mantissa; $q$: exponent)
-{\large
-\[
-x = (-1)^s \times c \times 2^q
-\]
-}
-\begin{center}
-\begin{tabular}{r|c|c|cc}
-{\slshape size} & $s, c$ {\slshape bits} & $q$ {\slshape bits}
-& {\slshape range} & {\slshape precision}
-\\ \hline
-{\slshape 32-bit} & 24 & 8
-& $\pm 3.4 \times 10^{38}$ & 7.2 digits
-\\[4pt]
-{\slshape 64-bit} & 53 & 11
-& $\pm 1.8 \times 10^{308}$ & 16 digits
-\end{tabular}
-\end{center}
-\item Quiet and signaling \myemph{not-a-number} (NaN)
-\item Positive and negative \myemph{infinity} ($+\infty, -\infty$)
-\item \myemph{Stan} uses 64-bit floating point
-\end{itemize}
-
-
-\sld{Catastrophic Cancellation}
-%
-\begin{itemize}
-\item Subtraction risks \myemph{catastrophic cancellation}
-\item Consider $0.99802 - 0.99801 = 0.00001$
-\begin{subitemize}
-\item input has five digits of precision
-\item output has single digit of precision
-\end{subitemize}
-\item E.g., problem for sample variance of sequence $x$
-\[
-\mbox{var}(x) = \frac{1}{N - 1} \, \sum_{n = 1}^N (x_n - \overline{x})^2
-\]
-if elements $x_n$ close to sample mean
-\[
-\overline{x} = \frac{1}{N} \, \sum_{n=1}^N x_n
-\]
-\end{itemize}
-
-\sld{Welford's Algorithm}
-\begin{itemize}
-\item \myemph{Streaming computation} uses fixed memory
-\begin{stancode}
-N = 0;    mean = 0;    sum_sq_err = 0
-
-handle(y):
-    N += 1
-    diff = y - mean
-    mean = mean + diff / N
-    diff2 = y - mean
-    sum_sq_err += diff * diff2
-
-mean():  return mean
-
-var():  return sum_sq_err / (N - 1)
-\end{stancode}
-\item Two stage difference is \myemph{less prone to cancellation}
-\end{itemize}
-
-
-\sld{Gaps Between Numbers}
-%
-\begin{itemize}
-\item Smallest number greater than zero
-\begin{subitemize}
-\item single precision:  $1.4 \times 10^{-45}$
-\item double precision: $4.9 \times 10^{-324}$
-\end{subitemize}
-\item Largest number less than one
-\begin{subitemize}
-\item single precision: $1 - 10^{-16}$
-\item double precision: $1 - 10^{-7.2}$
-\end{subitemize}
-\item Gap size \myemph{depends on scale}
-\end{itemize}
-
-
-\sld{Lack of Transitivity}
-%
-\begin{itemize}
-\item For real numbers $x, y, z \in \mathbb{R}$,
-\[
-x + (y + z) \ = \ (x + y) + z
-\]
-\item This can fail for floating point due to rounding
-\begin{subitemize}
-\item \code{(1 + 6e-17) + 6e-17 == 1}
-\item \code{1 + (6e-17 + 6e-17) != 1}
-\end{subitemize}
-\item For square matrices $L \, L^{\top}$ is symmetric
-\item This won't hold for efficient matrix multiplications
-\begin{subitemize}
-\item \code{(L * L')[1, 2] != (L * L')[2, 1]}
-\end{subitemize}
-\end{itemize}
-
-
-\sld{Rounding and Equality}
-%
-\begin{itemize}
-\item Dangerous to compare floating point numbers
-\begin{subitemize}
-\item they may have lost precision during calculation
-\end{subitemize}
-\item Rounding
-\begin{subitemize}
-\item default: round toward nearest
-\item round toward zero, round to plus or minus infinity
-\end{subitemize}
-\end{itemize}
-
-
-\sld{Overflow and Rounding}
-%
-\begin{itemize}
-\item Because there is a max size, operations can overflow
-\begin{subitemize}
-\item e.g., \code{exp(1000)}, \code{1e200 * 1e200}, ...
-\end{subitemize}
-\item Because there are gaps, operations can round to zero
-\begin{subitemize}
-\item e.g., \code{exp(-1000)}, \code{1e-200 * 1e-200}, ...
-\item e.g., evaluating $\prod_{n=1}^N p(y_n | \theta)$ underflows
-for $N = 2000$ if $p(y_n | \theta) < 0.1$.
-\end{subitemize}
-\end{itemize}
-
-
-\sld{Example: \code{log1p} and CCDFs}
-%
-\begin{itemize}
-\item \code{log1p(x)} is for evaluating $\log$ near one
-\begin{subitemize}
-\item when \code{x} is near zero, \code{1 + x} catastrophically rounds
-  to 1
-\item this forces \code{log(1 + x)} to round to 0
-\item \code{log1p(x)} avoids \code{1 + x} operation
-\item \code{log1p(x)} uses Taylor series expansion of $\log(1 + x)$
-\end{subitemize}
-\item Complementary CDFs evaluate CDFs with values near one
-\begin{subitemize}
-\item $X$ is some random variable, e.g., $X \sim \mathsf{Normal}(0, 1)$
-\item CDF: $F_X(x) = \mbox{Pr}[X \leq x]$
-\item CCDF: $F^{\complement}_X(x) = 1 - \mbox{Pr}[X \leq x]$
-\item converts range around one to range around zero
-\end{subitemize}
-\end{itemize}
-
-
-\sld{Example: \code{log} and \code{log\_sum\_exp}}
-%
-\begin{itemize}
-\item \myemph{Multiplication on the log scale}: \code{log}
-\begin{subitemize}
-\item $\log (a \times b) = \log a + \log b$
-\item log converts multiplication to addition
-\item $\log \prod_n x_n = \sum_n \log x_n$
-\item avoids underflow and overflow even if $x_n \ll 1$ or $x_n \gg 1$
-\item useful absolutely everywhere (e.g., log likelihoods)
-\end{subitemize}
-\item \myemph{Addition on the log scale}: \code{log\_sum\_exp}
-\begin{subitemize}
-\item $\log (a + b) = \log(\exp(\log a) + \exp(\log b))$
-\item log converts addition to log sum of exponentials
-\item avoids underflow and overflow, preserves precision
-\item useful for mixtures (e.g., HMMs, zero-inflated Poisson)
-\end{subitemize}
-\end{itemize}
-
-
-\sld{Example: \code{log\_sum\_exp}}
-%
-\begin{itemize}
-\item Without loss of generality, assume $a > b$ (otherwise swap)
-\vspace*{-8pt}
-\begin{eqnarray*}
-\mathrm{log\_sum\_exp}(a, b) & = & \log(\exp(a) + \exp(b))
-\\[2pt]
-& = & a + \log(\exp(a - a) + \exp(b - a))
-\\[2pt]
-& = & a + \log(1 + \exp(b - a))
-\\[2pt]
-& = & a + \mathrm{log1p(\exp(b - a))}
-\end{eqnarray*}
-\vspace*{-8pt}
-\begin{subitemize}
-\item \myemph{increase precision}: \ pull $a$ out of $\log()$ and
-  $\exp()$
-\item \myemph{increase precision}: \ use \code{log1p}
-\item \myemph{prevents overflow}: \ can't overflow because $b - a \leq 0$
-\end{subitemize}
-\item Generalize to more than two inputs: subtract max
-\end{itemize}
-\end{document}
 
 % TITLE SLIDE
 %
@@ -240,8 +38,10 @@ for $N = 2000$ if $p(y_n | \theta) < 0.1$.
     Ali, \ \myemph{Sean Talts},}
   \\
   \spc{\footnotesize Ben Bales, \ Ari Hartikainen, \ Matthijs
-    V\`ak\`ar, \ Andrew Johnson}
-\\[-8pt] \noindent
+    V\`ak\`ar, \ Andrew Johnson,}
+  \\
+  \spc{\footnotesize Dan Simpson}
+\\[-20pt] \noindent
   \spc{\small Stan 2.17 \ \footnotesize (November 2017)
     \hfill \url{http://mc-stan.org}} \hfill
 \includegraphics[width=0.45in]{img/new-logo.png}
@@ -567,34 +367,239 @@ expected to fall.
 \end{itemize}
 
 
+\mypart{}{Numerical Analysis}
+
+\sld{Floating-Point Standard: IEEE 754}
+%
+\begin{itemize}
+\item \myemph{Finite numbers} ($s$: sign; $c$: mantissa; $q$: exponent)
+{\large
+\[
+x = (-1)^s \times c \times 2^q
+\]
+}
+\begin{center}
+\begin{tabular}{r|c|c|cc}
+{\slshape size} & $s, c$ {\slshape bits} & $q$ {\slshape bits}
+& {\slshape range} & {\slshape precision}
+\\ \hline
+{\slshape 32-bit} & 24 & 8
+& $\pm 3.4 \times 10^{38}$ & 7.2 digits
+\\[4pt]
+{\slshape 64-bit} & 53 & 11
+& $\pm 1.8 \times 10^{308}$ & 16 digits
+\end{tabular}
+\end{center}
+\item Quiet and signaling \myemph{not-a-number} (NaN)
+\item Positive and negative \myemph{infinity} ($+\infty, -\infty$)
+\item \myemph{Stan} uses 64-bit floating point
+\end{itemize}
+
+
+\sld{Catastrophic Cancellation}
+%
+\begin{itemize}
+\item Subtraction risks \myemph{catastrophic cancellation}
+\item Consider $0.99802 - 0.99801 = 0.00001$
+\begin{subitemize}
+\item input has five digits of precision
+\item output has single digit of precision
+\end{subitemize}
+\item E.g., problem for sample variance of sequence $x$
+\[
+\mbox{var}(x) = \frac{1}{N - 1} \, \sum_{n = 1}^N (x_n - \overline{x})^2
+\]
+if elements $x_n$ close to sample mean
+\[
+\overline{x} = \frac{1}{N} \, \sum_{n=1}^N x_n
+\]
+\end{itemize}
+
+\sld{Welford's Algorithm}
+\begin{itemize}
+\item \myemph{Streaming computation} uses fixed memory
+\begin{stancode}
+N = 0;    mean = 0;    sum_sq_err = 0
+
+handle(y):
+    N += 1
+    diff = y - mean
+    mean = mean + diff / N
+    diff2 = y - mean
+    sum_sq_err += diff * diff2
+
+mean():  return mean
+
+var():  return sum_sq_err / (N - 1)
+\end{stancode}
+\item Two stage difference is \myemph{less prone to cancellation}
+\end{itemize}
+
+
+\sld{Gaps Between Numbers}
+%
+\begin{itemize}
+\item Smallest number greater than zero
+\begin{subitemize}
+\item single precision:  $1.4 \times 10^{-45}$
+\item double precision: $4.9 \times 10^{-324}$
+\end{subitemize}
+\item Largest number less than one
+\begin{subitemize}
+\item single precision: $1 - 10^{-16}$
+\item double precision: $1 - 10^{-7.2}$
+\end{subitemize}
+\item Gap size \myemph{depends on scale}
+\end{itemize}
+
+
+\sld{Lack of Transitivity}
+%
+\begin{itemize}
+\item For real numbers $x, y, z \in \mathbb{R}$,
+\[
+x + (y + z) \ = \ (x + y) + z
+\]
+\item This can fail for floating point due to rounding
+\begin{subitemize}
+\item \code{(1 + 6e-17) + 6e-17 == 1}
+\item \code{1 + (6e-17 + 6e-17) != 1}
+\end{subitemize}
+\item For square matrices $L \, L^{\top}$ is symmetric
+\item This won't hold for efficient matrix multiplications
+\begin{subitemize}
+\item \code{(L * L')[1, 2] != (L * L')[2, 1]}
+\end{subitemize}
+\end{itemize}
+
+
+\sld{Rounding and Equality}
+%
+\begin{itemize}
+\item Dangerous to compare floating point numbers
+\begin{subitemize}
+\item they may have lost precision during calculation
+\end{subitemize}
+\item Rounding
+\begin{subitemize}
+\item default: round toward nearest
+\item round toward zero, round to plus or minus infinity
+\end{subitemize}
+\end{itemize}
+
+
+\sld{Overflow and Rounding}
+%
+\begin{itemize}
+\item Because there is a max size, operations can overflow
+\begin{subitemize}
+\item e.g., \code{exp(1000)}, \code{1e200 * 1e200}, ...
+\end{subitemize}
+\item Because there are gaps, operations can round to zero
+\begin{subitemize}
+\item e.g., \code{exp(-1000)}, \code{1e-200 * 1e-200}, ...
+\item e.g., evaluating $\prod_{n=1}^N p(y_n | \theta)$ underflows
+for $N = 2000$ if $p(y_n | \theta) < 0.1$.
+\end{subitemize}
+\end{itemize}
+
+
+\sld{Example: \code{log1p} and CCDFs}
+%
+\begin{itemize}
+\item \code{log1p(x)} is for evaluating $\log$ near one
+\begin{subitemize}
+\item when \code{x} is near zero, \code{1 + x} catastrophically rounds
+  to 1
+\item this forces \code{log(1 + x)} to round to 0
+\item \code{log1p(x)} avoids \code{1 + x} operation
+\item \code{log1p(x)} uses Taylor series expansion of $\log(1 + x)$
+\end{subitemize}
+\item Complementary CDFs evaluate CDFs with values near one
+\begin{subitemize}
+\item $X$ is some random variable, e.g., $X \sim \mathsf{Normal}(0, 1)$
+\item CDF: $F_X(x) = \mbox{Pr}[X \leq x]$
+\item CCDF: $F^{\complement}_X(x) = 1 - \mbox{Pr}[X \leq x]$
+\item converts range around one to range around zero
+\end{subitemize}
+\end{itemize}
+
+
+\sld{Example: \code{log} and \code{log\_sum\_exp}}
+%
+\begin{itemize}
+\item \myemph{Multiplication on the log scale}: \code{log}
+\begin{subitemize}
+\item $\log (a \times b) = \log a + \log b$
+\item log converts multiplication to addition
+\item $\log \prod_n x_n = \sum_n \log x_n$
+\item avoids underflow and overflow even if $x_n \ll 1$ or $x_n \gg 1$
+\item useful absolutely everywhere (e.g., log likelihoods)
+\end{subitemize}
+\item \myemph{Addition on the log scale}: \code{log\_sum\_exp}
+\begin{subitemize}
+\item $\log (a + b) = \log(\exp(\log a) + \exp(\log b))$
+\item log converts addition to log sum of exponentials
+\item avoids underflow and overflow, preserves precision
+\item useful for mixtures (e.g., HMMs, zero-inflated Poisson)
+\end{subitemize}
+\end{itemize}
+
+
+\sld{Example: \code{log\_sum\_exp}}
+%
+\begin{itemize}
+\item Without loss of generality, assume $a > b$ (otherwise swap)
+\vspace*{-8pt}
+\begin{eqnarray*}
+\mathrm{log\_sum\_exp}(a, b) & = & \log(\exp(a) + \exp(b))
+\\[2pt]
+& = & a + \log(\exp(a - a) + \exp(b - a))
+\\[2pt]
+& = & a + \log(1 + \exp(b - a))
+\\[2pt]
+& = & a + \mathrm{log1p(\exp(b - a))}
+\end{eqnarray*}
+\vspace*{-8pt}
+\begin{subitemize}
+\item \myemph{increase precision}: \ pull $a$ out of $\log()$ and
+  $\exp()$
+\item \myemph{increase precision}: \ use \code{log1p}
+\item \myemph{prevents overflow}: \ can't overflow because $b - a \leq 0$
+\end{subitemize}
+\item Generalize to more than two inputs: subtract max
+\end{itemize}
+
+
 \mypart{}{Monte Carlo \\[8pt]\spc Integration}
 
 \sld{Monte Carlo Calculation of $\pi$}
 
 \noindent
 \begin{minipage}[t]{0.65\textwidth}
-\vspace*{2pt}
 \begin{itemize}
 \item Computing $\pi = 3.14\ldots$ via simulation is \emph{the} textbook application
 of Monte Carlo methods.
 \vfill
 \item Generate points uniformly at random within the square
-\item Calculate proportion within circle ($x^2 + y^2 < 1$) and multiply by square's area (4) to produce the area of the circle.
+\item Calculate proportion within circle ($x^2 + y^2 \leq 1$) and multiply by square's area (4) to produce the area of the circle.
 \item This area is $\pi$ (radius is 1, so area is $\pi r^2 = \pi$)
 \end{itemize}
 \end{minipage}
 %
-\begin{minipage}[t]{0.34\textwidth}
+\hfill
+\begin{minipage}[t]{0.2\textwidth}
 \vspace*{12pt}
-\hfill \includegraphics[height=1in]{img/mc-integration-wikipedia.png}
-\\
+\hfill \includegraphics[height=\textwidth]{img/mc-integration-wikipedia.png}
+\\[4pt]
+{\tiny plot by Mysid Yoderj,\\ courtesy of Wikipedia.}
 \end{minipage}
 \vfill
-{ } \hfill {\tiny Plot by Mysid Yoderj courtesy of Wikipedia.}
+
 
 \sld{Monte Carlo Calculation of $\pi$ {\normalsize (cont.)}}
 %
-\begin{itemize}
+\begin{subitemize}
 \item R code to calcuate $\pi$ with Monte Carlo simulation:
 \\[-8pt]
 {\small
@@ -602,14 +607,81 @@ of Monte Carlo methods.
 > x <- runif(1e6,-1,1)
 > y <- runif(1e6,-1,1)
 
-> prop_in_circle <- sum(x^2 + y^2 < 1) / 1e6
+> prop_in_circle <- sum(x^2 + y^2 <= 1) / 1e6
 
 > 4 * prop_in_circle
 [1] 3.144032
 \end{Verbatim}
 }
+\end{subitemize}
+
+
+\sld{$\pi$ as an Expectation}
+%
+\begin{itemize}
+\item If probability is uniform over the sample space,
+\\[2pt] \ \ then an event's
+  probability is its area (volume in general)
+\item Suppose $X, Y \sim \mathsf{Uniform}(-1, 1)$
+\item Then $\mathrm{Pr}[X^2 + Y^2 \leq 1] \ = \ \pi / 4$.
+\item To calculate using Monte Carlo draws $(x^{(m)}, y^{(m)})$,
+{\small
+\begin{eqnarray*}
+\mathrm{Pr}[X^2 + Y^2 \leq 1]
+& = & \mathbb{\normalsize E}\!\left[ \, \mathrm{\normalsize I}\!\left[ X^2 + Y^2 < 1 \right]
+      \, \right]
+\\[8pt]
+& = & \int_{-1}^1 \int_{-1}^1 \
+       \mathrm{\normalsize I}\!\left[ x^2 + y^2 < 1 \right] \ p_X(x) \ p_Y(y) \ \mathrm{d}x \, \mathrm{d}y
+\\[8pt]
+& \approx
+& \frac{1}{M}
+\ \mathrm{\Large I}\!\left[ \left( x^{(m)} \right)^2 + \left( y^{(m)} \right)^2
+                   < 1 \right]
+\end{eqnarray*}
+}
 \end{itemize}
 
+\sld{Calculating $\pi$ with Stan}
+%
+\begin{itemize}
+\item Complete Stan program to compute $\mathrm{Pr}[X^2 + Y^2 \leq 1]$:
+\begin{stancode}
+generated quantities {
+  real x = uniform_rng(-1, 1);
+  real y = uniform_rng(-1, 1);
+  real pi_div_4 = hypot(x, y) <= 1;
+}
+\end{stancode}
+\item \myemph{Simulates} $X$ and $Y$
+\item \myemph{Codes indicator function} implicitly with comparison
+\begin{subitemize}
+\item uses Stan's built-in hypoteneuse function
+\item \Verb|hypot(a, b) = sqrt(a^2 + b^2)|
+\end{subitemize}
+\end{itemize}
+
+\sld{Fitting Stan model for $\pi$ in R}
+\begin{itemize}
+\item \code{Fixed\_param} algorithm for no parameters
+\begin{stancode}
+> fit <- stan("pi.stan", algorithm="Fixed_param",
+              iter=100000)
+\end{stancode}
+\item Print only what's needed (print output elided manually)
+\begin{stancode}
+> print(fit, digits=3, probs=c(), pars=c("pi_div_4"))
+
+          mean se_mean
+pi_div_4 0.786   0.001
+\end{stancode}
+\item Estimate accurate to \myemph{within estimated tolerances}
+\begin{subitemize}
+\item $4 \times 0.786 = 3.144$
+\item predicted accuracy is 0.004 (four times standard error)
+\end{subitemize}
+\end{itemize}
+\end{document}
 
 \sld{Accuracy of Monte Carlo}
 %
