note on notation

--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -248,6 +248,8 @@ several potential outcomes
 \item Bayesian statistics is about using uncertainty in inference.
 \end{itemize}
 
+{\footnotesize Notation: $\theta^{*}$ denotes the
+{\it maximum likelihood estimate} of $\theta$.}
 
 \sld{Confidence via Simulation}
 %
