tweak wording for better standalone readability

--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -687,7 +687,7 @@ pi_div_4 0.786   0.001
 \sld{Accuracy of Monte Carlo}
 %
 \begin{itemize}
-\item Monte Carlo is \emph{not} that kind of an approximation!
+\item Monte Carlo Integration is \emph{not} an approximation algorithm!
 \item It can be made exact to within any $\epsilon$
 \item Monte Carlo draws are i.i.d. by definition
 \item Central limit theorem: expected error decreases at rate of
