--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -64,8 +64,8 @@
 % need newline here
 
 \noindent
-\begin{minipage}[t]{0.58\textwidth}
-\vspace*{-1in}
+\begin{minipage}[t]{0.59\textwidth}
+\vspace*{-1.7in}
 \begin{subitemize}
 \item If $x, y, z \sim \mathsf{Uniform}(-1, 1)$,
 \item then $\mbox{Pr}[(x,y,z) \in \mbox{unit ball}]$ \hfill
@@ -81,10 +81,11 @@ $\sqrt{x^2 + y^2 + z^2} \leq 1$
 \end{subitemize}
 \end{minipage}
 \hfill
-\begin{minipage}[t]{0.3\textwidth}
-\includegraphics[width=\textwidth]{img/ball-in-cube.pdf}
-
-{\footnotesize\slshape 4000 simulations; those in unit ball shown in blue.}
+\begin{minipage}[t]{0.4\textwidth}
+\includegraphics[width=1.2\textwidth]{img/ball-in-cube.pdf}
+\\[-12pt]
+{\footnotesize\slshape \hspace*{0.5in}4000 simulations;
+\\\hspace*{0.5in}blue inside unit ball.}
 \end{minipage}
 
 % Key R for that plot:
@@ -107,29 +108,101 @@ generated quantities {
 }
 \end{stancode}
 \begin{subitemize}
-\item \code{in\_ball} is value of indicator function.
-\item indicator function implicit in comparison (\code{<=}).
-\item Posterior mean of \code{in\_ball} estimates
-$\mbox{Pr}[x^2 + y^2 + z^2 \leq 1]$.
+\item \code{in\_ball} is value of indicator (implicit in \code{<=}).
+\item Posterior mean of \code{in\_ball} is fraction draws in ball.
+\item Posterior mean estimates $\mbox{Pr}[x^2 + y^2 + z^2 \leq 1]$.
 \end{subitemize}
 
-\sld{Ball in Cube in R}
+\sld{Ball in Cube in Stan from RStan}
 %
 \begin{itemize}
-\item To run in R, use \code{Fixed\_param} option.
+\item Use the \code{Fixed\_param} algorithm:
 
 \begin{stancode}
-> fit <- stan("ball-in-cube.stan", algorithm="Fixed_param",
+> fit <- stan("ball-in-cube.stan",
+               algorithm="Fixed_param",
               iter=10000)
+
 > print(fit, probs=c(), digits=3)
 
-        mean se_mean  sd n_eff Rhat
-in_ball 0.52   0.004 0.5 19780    1
+         mean se_mean    sd n_eff Rhat
+in_ball 0.528   0.004 0.499 19400    1
 \end{stancode}
-\item 0.52 is our estimate of $\mbox{Pr}[x^2 + y^2 + z^2 \leq 1]$
-\item The standard error of 0.004 indicates the 95\% interval is
-  roughly $0.52 \pm 0.008$
+\item Thus $\mbox{Pr}[X^2 + Y^2 + Z^2 \leq 1] \approx 0.53$
+\item with standard error of 0.004, yielding a 95\% interval of $\pm
+  0.008$, i.e., roughly (0.52, 0.54)
 \end{itemize}
+
+
+
+\sld{Hyperballs in Hypercubes}
+%
+\begin{itemize}
+\item \myemph{sample uniformly} from container (square, cube, ...)
+\item 2 dimensions $(x, y)$: compute $\mbox{Pr}[X^2 + Y^2 \leq 1]$
+  \begin{subitemize}
+  \item unit \myemph{disc} inscribed in square
+  \item calculate $\pi$ given known area of circle ($2 \pi$)
+  \end{subitemize}
+\item 3 dimensions $(x, y, z)$: compute $\mbox{Pr}[X^2 + Y^2 + Z^2 \leq 1]$
+  \begin{subitemize}
+  \item unit \myemph{ball} inscribed in cube
+  \end{subitemize}
+\item $N$-dimensions $(x_1, \ldots, x_N)$: compute $\mbox{Pr}[X_1^2 +
+  \cdots X_N^2 \leq 1]$
+  \begin{subitemize}
+  \item unit \myemph{hyperball} inscribed in hypercube
+  \end{subitemize}
+\item Code event probability as \myemph{expectation of indicator}
+\end{itemize}
+
+\sld{Hyperballs in Hypercubes in Stan}
+\vspace*{-8pt}
+\begin{stancode}
+generated quantities {
+  int<lower=0, upper=1> in_ball[10];
+  {
+    real len = 0;
+    for (n in 1:10) {
+      len = len + uniform_rng(-1, 1)^2;
+      in_ball[n] = (len <= 1);
+    }
+  }
+}
+\end{stancode}
+%
+\begin{subitemize}
+\item draw $x_1, \ldots, x_N$ is implicit in \code{uniform\_rng}
+\item \code{in\_ball[n]} is 1 iff $x_1^2 + \cdots + x_n^2 \leq 1$; \
+  coded as indicator \Verb|(len <= 1)|
+\item sum of squares accumulation reduces quadratic time to linear
+\end{subitemize}
+
+\sld{Hyperballs in Hypercubes in RStan}
+\begin{stancode}
+> fit <- stan("hyperballs.stan", algorithm="Fixed_param",
+              iter=1e4)
+
+> print(fit, probs=c())
+
+            mean se_mean   sd n_eff Rhat
+in_ball[1]  1.00       0 0.00 20000  NaN
+in_ball[2]  0.78       0 0.41 20000    1
+in_ball[3]  0.52       0 0.50 20000    1
+in_ball[4]  0.31       0 0.46 20000    1
+in_ball[5]  0.17       0 0.38 20000    1
+in_ball[6]  0.08       0 0.27 20000    1
+in_ball[7]  0.04       0 0.19 18460    1
+in_ball[8]  0.02       0 0.12 19370    1
+in_ball[9]  0.01       0 0.08 20000    1
+in_ball[10] 0.00       0 0.05 20000    1
+\end{stancode}
+
+\sld{Proportion Volume in Hyperball}
+
+\spc
+\includegraphics[width=0.825\textwidth]{img/volume-hyperball.png}
+
 
 \end{document}
 
